# gapbuf-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: benches.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benches.rs
examples/: simple.rs
src/: finally.rs  gap_buffer.rs  lib.rs  raw_buffer.rs  tests.rs
tests/: tests.rs  tests_proptest.proptest-regressions  tests_proptest.rs
