[package]
name = "gapbuf"
version = "0.1.2"
authors = ["FrozenLib"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/gapbuf-rs"
documentation = "https://docs.rs/gapbuf/"
keywords = ["gap", "gapbuffer"]
categories = ["data-structures"]
description = "Generic gap buffer."
edition = "2018"

[badges]
travis-ci = { repository = "frozenlib/gapbuf-rs" }

[features]
docs-rs = []

[dependencies]

[dev-dependencies]
test-strategy = "0.1.0"
proptest = "0.10.1"

[package.metadata.docs.rs]
features = [ "docs-rs" ]