[package]
name = "gapbuf"
version = "0.1.3"
authors = ["FrozenLib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/gapbuf-rs"
documentation = "https://docs.rs/gapbuf/"
keywords = ["gap", "gapbuffer"]
categories = ["data-structures"]
description = "Generic gap buffer."
edition = "2018"

[features]
docs-rs = []

[dependencies]

[dev-dependencies]
test-strategy = "0.1.2"
proptest = "1.0.0"
getrandom = "0.2.3"

[package.metadata.docs.rs]
features = [ "docs-rs" ]